--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "lint": "eslint --ext .ts,.js .",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "env-cmd -e development playwright test --headed"
+    "test": "env-cmd -e development react-scripts test"
   },
   "devDependencies": {
-    "@playwright/test": "^1.17.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
