--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint --ext .ts,.js .",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "env-cmd -e development react-scripts test"
+    "test": "react-scripts test"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
