--- a/package.json
+++ b/package.json
@@ -59,6 +59,11 @@
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "react-i18next": "<rootDir>/__mocks__/react-i18next.ts"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
