--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@hookform/resolvers": "^2.8.4",
     "@mui/material": "^5.2.3",
+    "@testing-library/dom": "^8.14.0",
     "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "i18next": "^21.6.6",
@@ -33,10 +34,10 @@
   },
   "devDependencies": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^27.4.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.3",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
