--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "env-cmd": "^10.1.0",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
-    "i18next-http-backend": "^1.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.21.2",
@@ -29,8 +28,7 @@
     "lint": "eslint --ext .ts,.js .",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "env-cmd -e development react-scripts test",
-    "trans": "i18next 'src/**/*.{ts,tsx}'"
+    "test": "env-cmd -e development react-scripts test"
   },
   "devDependencies": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
