--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "env-cmd": "^10.1.0",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.21.2",
@@ -21,7 +22,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
-    "zod": "^3.11.6"
+    "zod": "^3.20.6"
   },
   "scripts": {
     "start": "env-cmd -e development react-scripts start",
@@ -36,6 +37,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.3",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
