--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.2.3",
     "@testing-library/dom": "^8.14.0",
     "axios": "^0.27.2",
+    "e-calculator-schemas": "git+ssh://ecg00-gitea@git.ecogood.org:services/e-calculator-schemas.git#v1.0.13",
     "env-cmd": "^10.1.0",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
