--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.1",
   "private": true,
   "dependencies": {
+    "@ecogood/e-calculator-schemas": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.16",
@@ -10,7 +11,6 @@
     "@mui/material": "^5.2.3",
     "@testing-library/dom": "^8.14.0",
     "axios": "^0.27.2",
-    "e-calculator-schemas": "git+ssh://ecg00-gitea@git.ecogood.org:services/e-calculator-schemas.git#v1.0.13",
     "env-cmd": "^10.1.0",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
