--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.21",
+    "msw": "^1.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.21.2",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
+    "wretch": "^2.6.0",
     "zod": "^3.20.6"
   },
   "scripts": {
