--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.21",
     "msw": "^1.2.2",
+    "oidc-react": "^3.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.21.2",
