--- a/package.json
+++ b/package.json
@@ -1,81 +1,60 @@
 {
-  "name": "e-calculator-ui",
-  "version": "2.1.1",
+  "name": "e-calculator-frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "vite --port 3000",
+    "build": "tsc && vite build",
+    "test": "vitest",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@ecogood/e-calculator-schemas": "^1.5.4",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@hookform/resolvers": "^2.8.4",
-    "@mui/material": "^5.2.3",
-    "@testing-library/dom": "^8.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^5.15.5",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@types/lodash": "^4.14.202",
     "env-cmd": "^10.1.0",
-    "i18next": "^21.6.6",
-    "i18next-browser-languagedetector": "^6.1.2",
+    "happy-dom": "^13.2.0",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "jsdom": "^23.2.0",
     "lodash": "^4.17.21",
     "msw": "^1.2.2",
     "oidc-react": "^3.2.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-hook-form": "^7.21.2",
-    "react-i18next": "^11.15.3",
-    "react-router-dom": "^6.11.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4",
-    "wretch": "^2.6.0",
-    "zod": "^3.20.6"
-  },
-  "scripts": {
-    "start": "env-cmd -e development react-scripts start",
-    "lint": "eslint --ext .ts,.js .",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "env-cmd -e development react-scripts test"
+    "prettier": "^3.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.0.0",
+    "react-router-dom": "^6.21.3",
+    "styled-components": "^6.1.8",
+    "wretch": "^2.8.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.3",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^17.0.36",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.17",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-unused-imports": "^1.1.4",
-    "prettier": "2.3.2",
-    "typescript": "^4.1.2"
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vitest": "^1.2.1"
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "react-i18next": "<rootDir>/__mocks__/react-i18next.ts"
-    }
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 firefox version"
-    ]
   }
 }
