--- a/volumes/conf.d/default.conf
+++ b/volumes/conf.d/default.conf
@@ -7,7 +7,7 @@ server {
 
     location / {
         root   /var/www/html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     #error_page  404              /404.html;
