--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ecogood/e-calculator-schemas": "^1.5.4",
+    "-": "^0.0.1",
+    "@ecogood/e-calculator-schemas": "^1.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -20,6 +21,8 @@
     "@mui/material": "^5.15.5",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@types/uuid": "^9.0.8",
+    "D": "^1.0.0",
     "env-cmd": "^10.1.0",
     "happy-dom": "^13.2.0",
     "i18next": "^23.7.16",
@@ -33,16 +36,15 @@
     "react-i18next": "^14.0.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "wretch": "^2.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "msw": "^1.2.2",
-    "prettier": "^3.2.4",
     "@testing-library/jest-dom": "^6.2.0",
-    "@types/lodash": "^4.14.202",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -51,6 +53,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "msw": "^1.2.2",
+    "prettier": "^3.2.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.2.1"
