--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@ecogood/e-calculator-schemas": "^1.8.0",
+    "@ecogood/e-calculator-schemas": "^1.9.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -24,6 +24,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@types/uuid": "^9.0.8",
     "D": "^1.0.0",
+    "deep-freeze": "^0.0.1",
     "env-cmd": "^10.1.0",
     "happy-dom": "^13.2.0",
     "i18next": "^23.7.16",
@@ -35,7 +36,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^14.0.0",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "6.23.1",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
     "wretch": "^2.8.0",
@@ -43,8 +44,9 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/deep-freeze": "^0.1.5",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
