--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@ecogood/e-calculator-schemas": "^1.9.0",
+    "@ecogood/e-calculator-schemas": "2.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -40,7 +40,7 @@
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
     "wretch": "^2.8.0",
-    "zod": "^3.22.4"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
