--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "jsdom": "^23.2.0",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.1",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
