--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^14.0.0",
+    "react-number-format": "^5.4.3",
     "react-router-dom": "6.23.1",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
