--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "vite --port 3000",
     "build": "tsc && vite build",
     "check-ts": "tsc --noEmit",
-    "test": "vitest",
+    "test": "vitest --maxWorkers=2",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
