--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "fishery": "^2.3.1",
     "msw": "^1.2.2",
     "prettier": "^3.2.4",
     "react-router-typesafe": "^1.5.0",
