feat: add general information fields to BalanceSheetCreationDialog
- Incorporated new input fields for company name, contact name, email, and period (start/end).
- Created `ReactHookFormDatePicker` component to handle date inputs.
- Updated dependencies: bumped `@ecogood/e-calculator-schemas` to v2.7.14, added `@mui/x-date-pickers` and `dayjs`.
- Improved form validation and handling logic with react-hook-form updates.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@ecogood/e-calculator-schemas": "^2.7.13",
+    "@ecogood/e-calculator-schemas": "^2.7.14",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -22,8 +22,9 @@
     "@mui/material": "^5.15.5",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@mui/x-date-pickers": "^8.16.0",
     "@types/uuid": "^9.0.8",
-    "D": "^1.0.0",
+    "dayjs": "^1.11.19",
     "deep-freeze": "^0.0.1",
     "env-cmd": "^10.1.0",
     "happy-dom": "^13.2.0",
