--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "e-calculator-frontend",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "start": "vite --port 3000",
     "build": "tsc && vite build",
     "check-ts": "tsc --noEmit",
     "test": "vitest --maxWorkers=4",
+    "test:ci": "CI=true test",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
