--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "check-ts": "tsc --noEmit",
     "test": "vitest --maxWorkers=4",
-    "test:ci": "CI=true vitest --maxWorkers=2",
+    "test:ci": "CI=true yarn run test",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
