--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
 
       - name: Build
-        run: VITE_BACKEND_DOMAIN=${{ env.VITE_BACKEND_DOMAIN }} VITE_ZITADEL_AUTHORITY_URL=${{ env.VITE_ZITADEL_AUTHORITY_URL }} VITE_ZITADEL_CLIENT_ID=${{ env.VITE_ZITADEL_CLIENT_ID }} VITE_FRONTEND_DOMAIN=${{ env.VITE_FRONTEND_DOMAIN }} GENERATE_SOURCEMAP=false yarn build
+        run: VITE_BACKEND_DOMAIN=${{ vars.VITE_BACKEND_DOMAIN }} VITE_ZITADEL_AUTHORITY_URL=${{ vars.VITE_ZITADEL_AUTHORITY_URL }} VITE_ZITADEL_CLIENT_ID=${{ vars.VITE_ZITADEL_CLIENT_ID }} VITE_FRONTEND_DOMAIN=${{ vars.VITE_FRONTEND_DOMAIN }} GENERATE_SOURCEMAP=false yarn build
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.4
