--- a/.github/workflows/check-workflow.yml
+++ b/.github/workflows/check-workflow.yml
@@ -7,6 +7,9 @@ on:
     branches: [ 'main' ]
 
 
+env:
+  NODE_VERSION: 18.7.0
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -14,7 +17,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ inputs.node-version }}
+          node-version: ${{ env.node-version }}
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
@@ -28,7 +31,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ inputs.node-version }}
+          node-version: ${{ env.node-version }}
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
